--- a/joinSpeakers.html
+++ b/joinSpeakers.html
@@ -115,25 +115,25 @@
 
 
                     <button type="button" id="trackCompleto"
-                        class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">Simula
+                        class="py-2.5 px-5 mr-2 mb-2 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200 focus:ring-gray-700 bg-gray-800 text-gray-400 border-gray-600 hover:text-white hover:bg-gray-700">Simula
                         Cargar SRT</button>
 
 
                     <div class="container-info">
-                        <div class="block  p-6 bg-white border border-gray-200 rounded-lg shadow  dark:bg-gray-800 dark:border-gray-700 "
+                        <div class="block  p-6 bg-white border border-gray-200 rounded-lg shadow  bg-gray-800 border-gray-700 "
                             id="contenedor-infoSRT">
-                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Info SRT
+                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-white">Info SRT
                             </h5>
 
-                            <p class="font-normal text-gray-700 dark:text-gray-400" id="infoSRT">Here are the biggest
+                            <p class="font-normal text-gray-700 text-gray-400" id="infoSRT">Here are the biggest
                                 enterprise</p>
                         </div>
                         <div id="contenedor-infoSpeaker"
-                            class="block  p-6 bg-white border border-gray-200 rounded-lg shadow  dark:bg-gray-800 dark:border-gray-700 ">
-                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">Info SRT
+                            class="block  p-6 bg-white border border-gray-200 rounded-lg shadow  bg-gray-800 border-gray-700 ">
+                            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900 text-white">Info SRT
                             </h5>
 
-                            <p class="font-normal text-gray-700 dark:text-gray-400" id="infoSRT">Here are the biggest
+                            <p class="font-normal text-gray-700 text-gray-400" id="infoSRT">Here are the biggest
                                 enterprise</p>
                         </div>
                     </div>
